force-app/main/default/objects/LegalEntity/LegalEntity.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>