force-app/main/default/objects/LegalEntity/fields/Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>Tax_Id__c</fullName>
    <label>Tax Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>