force-app/main/default/objects/LegalEntity/fields/Workday_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Workday_Reference_ID__c</fullName>
    <externalId>true</externalId>
    <label>Workday Reference ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>