force-app/main/default/objects/LegalEntity/listViews/Fortra_Legal_Entities.listView-meta.xml
<ListView>
    <fullName>Fortra_Legal_Entities</fullName>
    <columns>Name</columns>
    <columns>CompanyName</columns>
    <columns>Id</columns>
    <columns>Status</columns>
    <columns>CurrencyIsoCode</columns>
    <columns>Workday_Reference_ID__c</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <filterScope>Everything</filterScope>
    <label>Fortra Legal Entities</label>
</ListView>